# lagrange

./: AncSplit.cpp  AncSplit.h  BayesianBioGeo.cpp  BayesianBioGeo.h  BayesianBioGeoAllDispersal.cpp  BayesianBioGeoAllDispersal.h  BayesianBioGeoStMapper.cpp  BayesianBioGeoStMapper.h  BioGeoTree.cpp  BioGeoTree.h  BioGeoTreeTools.cpp  BioGeoTreeTools.h  BioGeoTreeTools_copper.cpp  BioGeoTreeTools_copper.h  BioGeoTree_copper.cpp  BioGeoTree_copper.h  BranchSegment.cpp  BranchSegment.h  BranchSegment_copper.cpp  BranchSegment_copper.h  CMakeLists.txt  InputReader.cpp  InputReader_copper.cpp  InputReader_copper.h  Makefile  Makefile.MAC  Makefile.fortran  OptimizeBioGeo.cpp  OptimizeBioGeoAllDispersal_copper.cpp  OptimizeBioGeoAllDispersal_copper.h  OptimizeBioGeo_copper.cpp  OptimizeBioGeo_copper.h  README  README.md  RateMatrixUtils.cpp  RateMatrixUtils.h  RateModel.cpp  RateModel.h  Utils.cpp  Utils.h  (+13 more)
older/: BioGeoTree.cpp  BioGeoTree.h  BioGeoTreeTools.cpp  BioGeoTreeTools.h  BranchSegment.cpp  BranchSegment.h  InputReader.cpp  InputReader.h  Makefile  Makefile.linux  OptimizeBioGeo.cpp  OptimizeBioGeoAllDispersal.cpp  OptimizeBioGeoAllDispersal.h  OptimizeBioGeoPowell.cpp  OptimizeBioGeoPowell.h  main.cpp
python/: addgpl.py
src/: BayesianBioGeo.cpp  BayesianBioGeoStMapper.cpp  BayesianBioGeoStMapper.h  BioGeoTree.cpp  BioGeoTreeTools.cpp  BranchSegment.h  Makefile  Makefile.MAC  Makefile.in  OptimizeBioGeo.h  OptimizeBioGeoAllDispersal.cpp  OptimizeBioGeoAllDispersal_nlopt.cpp  OptimizeBioGeoAllDispersal_nlopt.h  RateMatrixUtils.cpp  RateMatrixUtils.h  RateModel.cpp  RateModel.h  config.h  config.h.in  configure  configure.ac  double_node_object.h  main.cpp  node.cpp  node.h  superdouble.cpp  tree.cpp  vector_node_object.h
